Separated out project list to other component. Opened project is saved using session storage. Added a message for when no project could be loaded when going into /editor route. Fixed library not showing images correctly and a type error. Moved creating and opening projects to project store. Fixed projects not being able to load when a media item associated with it is unavailable. Added more functionality to library items.

--- a/packages/safelight/src/style.scss
+++ b/packages/safelight/src/style.scss
@@ -65,8 +65,18 @@ body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    // Might wanna change this in the future
+    display: flex;
+    min-height: 100vh;
+
+    #app {
+        flex-grow: 1;
+        min-height: 100%;
+    }
 }
 
 html {
     font-size: 14px;
+    min-height: 100%;
 }
